client/src/styles/Atlas.css
@font-face{
    font-family: 'inter';
    src:url('../assets/Inter-VariableFont_opsz,wght.ttf') format('truetype')
}

* {
    font-family: 'inter';
    font-weight: 300;
    margin: 0;
    padding: 0;
}

html {
    background-color: 'black';
}
/*Toggle Menu Styling*/
#toggle-menu{
    display: flex;
    flex-direction: column;
    justify-content: top;
    align-items: top;
    position: absolute;
    top: 55vh;
    left: 83%;
    height: 20rem;
    width: 13rem;
    border: 1.5px white solid
}
#toggle-radio-group {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: start;
    padding-left:1.25vw;
    padding-top: 1.6vh;
    gap: 1.1vh;
    background-color: transparent;
    border-top: 1.5px white solid
}
#toggle-radio-group > div {
    background-color: transparent;
}
#toggle-radio-group > div > label{
    margin-left: 10px;
    font-size: 0.8rem;
    background-color: transparent;
}
/*Search Menu Styling*/
#search{
    display: flex;
    flex-direction: column;
    justify-content: top;
    align-items: center;
    position: absolute;
    top: 3vh;
    left: 75%;
    height: 2rem;
    width: 20rem;
    background-color: transparent;
}
#search > div > input {
    background-color: rgba(0, 0, 0, 50%);
    border: 1.5px white solid;
    width: 20rem;
    height: 1rem;
    padding: 2px;
    color: white;
}
#search > div > input::placeholder{
    size: 20px;
}

#search > div{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2rem;
    background-color: transparent;
}
/*Title styling for all menu divs. This can change but will leave as placeholder until final decision is made*/
div > h1 {
    align-self: center;
    justify-self: center;
    margin-top: 0.5rem;
    font-size: 1.8rem;
}
/*Physical styling for all divs in the menu*/
body > div :not(:first-child) {
    color: white;
    background-color: rgba(0, 0, 0, 50%);
}

